--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,9 @@
         "topthink/framework": "^6.0.0",
         "topthink/think-orm": "^2.0",
       "ext-json": "*",
-        "topthink/think-view": "^1.0"
+        "topthink/think-view": "^1.0",
+        "topthink/think-migration": "^3.0",
+        "jaguarjack/migration-generator": "dev-master"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2",
