--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
       "ext-json": "*",
         "topthink/think-view": "^1.0",
         "topthink/think-migration": "^3.0",
-        "jaguarjack/migration-generator": "dev-master"
+        "jaguarjack/migration-generator": "dev-master",
+        "wenhainan/thinkphp6-auth": "^1.0"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2",
