--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "topthink/think-view": "^1.0",
         "topthink/think-migration": "^3.0",
         "jaguarjack/migration-generator": "dev-master",
-        "wenhainan/thinkphp6-auth": "^1.0"
+        "wenhainan/thinkphp6-auth": "^1.0",
+        "bping/ffmpeg-push": "dev-master"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2",
