--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     ],
     "require": {
         "php": ">=7.1.0",
+        "topthink/think-queue": "^3.0",
         "topthink/framework": "^6.0.0",
         "topthink/think-orm": "^2.0",
       "ext-json": "*",
@@ -28,7 +29,7 @@
         "topthink/think-migration": "^3.0",
         "jaguarjack/migration-generator": "dev-master",
         "wenhainan/thinkphp6-auth": "^1.0",
-        "bping/ffmpeg-push": "dev-master"
+        "php-ffmpeg/php-ffmpeg": "^0.18.0"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2",
