--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,12 @@
         "topthink/framework": "^6.0.0",
         "topthink/think-orm": "^2.0",
       "ext-json": "*",
-        "topthink/think-view": "^1.0",
         "topthink/think-migration": "^3.0",
         "jaguarjack/migration-generator": "dev-master",
         "wenhainan/thinkphp6-auth": "^1.0",
-        "php-ffmpeg/php-ffmpeg": "^0.18.0"
+        "php-ffmpeg/php-ffmpeg": "^0.18.0",
+        "topthink/think-multi-app": "^1.0",
+        "thans/tp-jwt-auth": "^1.1"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2",
